почти все пофиксили но порядок работы giveHint не устраивает. чек поинт нужен